--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project default ="run" name = "Kenit is Practising - compile and run JAVA class">
 	<target name="run" depends="compile">
+		<java classname="com.ant.demo.Demo">
+			<classpath path="staging/" />
+		</java>
 	</target> 
 	<target name="compile">
 		<javac includeantruntime="false" srcdir="./src" destdir="staging"/>
